# swc-experimental

./: Cargo.toml  README.md
.github/workflows/: CI.yml  codpeed.yml  cospeed.yml
crates/rspack_experimental_swc_ast_macros/src/: ast.rs
crates/rspack_experimental_swc_ecma_ast/: Cargo.toml
crates/rspack_experimental_swc_ecma_ast/src/: assert_layout.rs  ast.rs  lib.rs  node_id.rs
crates/swc_ast_macros/: Cargo.toml
crates/swc_ecma_ast/: Cargo.toml
crates/swc_ecma_ast_compat/: Cargo.toml
crates/swc_ecma_parser/: Cargo.toml
crates/swc_ecma_parser/benches/: parser.rs
crates/swc_ecma_parser/examples/: parse.rs
crates/swc_ecma_parser/src/: error.rs  lib.rs  string_alloc.rs
crates/swc_ecma_parser/src/lexer/: char_ext.rs  mod.rs  search.rs  source.rs  state.rs  token.rs  whitespace.rs
crates/swc_ecma_parser/src/parser/: class_and_fn.rs  expr.rs  ident.rs  input.rs  mod.rs  module_item.rs  object.rs  pat.rs  state.rs  stmt.rs  util.rs
crates/swc_ecma_parser/src/parser/js/: class_and_fn.rs  expr.rs  ident.rs  mod.rs  module_item.rs  object.rs  pat.rs  stmt.rs
crates/swc_ecma_parser/src/parser/jsx/: mod.rs
crates/swc_ecma_semantic/: Cargo.toml
crates/swc_ecma_semantic/src/: lib.rs  node.rs  reference.rs  scope.rs  symbol.rs
crates/swc_ecma_semantic/src/legacy/: mod.rs  resolver.rs  scope.rs  utils.rs
crates/swc_ecma_transforms_base/: Cargo.toml
crates/swc_ecma_visit/: Cargo.toml
docs/: FlatteningAST.md
tasks/ast_tools/: Cargo.toml
tasks/benchmark/: Cargo.toml
tasks/benchmark/benches/: ast_compat.rs  parser.rs  semantic.rs  semantic_compare.rs  visit_compare.rs
tasks/benchmark/examples/: ast_compat.rs  memory_hole.rs  opt_useless_node.rs  parse.rs  visit.rs
tasks/benchmark/examples/rspack_simulator/: experimental.rs  legacy.rs  main.rs
tasks/testsuite/: Cargo.toml
(+66 files in other folders)
