[package]
edition = "2024"
name    = "swc_experimental_ast_macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true, features = ["full", "parsing", "printing", "proc-macro", "clone-impls"] }
