[package]
edition = "2024"
name    = "swc_experimental_ecma_parser"
version = "0.1.0"

[dependencies]
bitflags    = { workspace = true }
either      = { workspace = true }
num-bigint  = { workspace = true }
oxc_index   = { workspace = true }
rustc-hash  = { workspace = true }
seq-macro   = { workspace = true }
smartstring = { workspace = true }
stacker     = { workspace = true }
swc_atoms   = { workspace = true }
swc_common  = { workspace = true }
tracing     = { workspace = true }

swc_experimental_ecma_ast = { workspace = true }
