[package]
edition = "2024"
name    = "rspack_experimental_swc_ecma_semantic"
version = "0.1.0"

[dependencies]
bitflags   = { workspace = true }
oxc_index  = { workspace = true }
rustc-hash = { workspace = true }

# For legacy
swc_atoms  = { workspace = true }
swc_common = { workspace = true }

rspack_experimental_swc_ecma_ast   = { workspace = true }
rspack_experimental_swc_ecma_visit = { workspace = true }
