[package]
edition = "2024"
name    = "benchmark"
version = "0.1.0"

[dependencies]
swc_experimental_ecma_parser = { workspace = true }

[dev-dependencies]
criterion       = { workspace = true }
mimalloc        = { workspace = true }
swc_ecma_parser = { workspace = true }

[[bench]]
harness = false
name    = "parser"
